# wot-bot

./: .gitignore  package.json  pyproject.toml  tsconfig.json
.devcontainer/: devcontainer.json
apps/web/: package.json  tsconfig.json
src/wot_bot/: __init__.py
