[project]
name = "wot-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "satler-git", email = "mitsclatw24@mbr.nifty.com" }
]
dependencies = [
    "discord.py>=2.3.2",
    "faster-whisper>=0.10.0",
    "langchain>=0.0.27",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "wot_bot:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wot_bot"]
